.metadata/.plugins/org.eclipse.cdt.ui/labo_7.build.log
20:40:16 **** Incremental Build of configuration Debug for project labo_7 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L432xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:108:13: error: invalid storage class for function 'MX_GPIO_Init'
  108 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:109:13: error: invalid storage class for function 'MX_USART_Init'
  109 | static void MX_USART_Init(void);
      |             ^~~~~~~~~~~~~
../Core/Src/main.c:110:13: error: invalid storage class for function 'MX_USART1_UART_Init'
  110 | static void MX_USART1_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:112:5: warning: 'main' is normally a non-static function [-Wmain]
  112 | int main(void)
      |     ^~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:118:5: warning: implicit declaration of function 'MX_USART_Receive_DMA'; did you mean 'HAL_UART_Receive_DMA'? [-Wimplicit-function-declaration]
  118 |     MX_USART_Receive_DMA (&huart1, UART1_rxBuffer, 12);
      |     ^~~~~~~~~~~~~~~~~~~~
      |     HAL_UART_Receive_DMA
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:127:35: error: 'UART1_rx_Buffer' undeclared (first use in this function); did you mean 'UART1_rxBuffer'?
  127 |     HAL_UART_Receive_DMA(&huart1, UART1_rx_Buffer, 12);
      |                                   ^~~~~~~~~~~~~~~
      |                                   UART1_rxBuffer
../Core/Src/main.c:127:35: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:105:19: warning: unused variable 'hdma_usart1_rx' [-Wunused-variable]
  105 | DMA_HandleTypeDef hdma_usart1_rx;
      |                   ^~~~~~~~~~~~~~
At top level:
../Core/Src/main.c:124:6: warning: 'HAL_UART_RxCpltCallback' defined but not used [-Wunused-function]
  124 | void HAL_UART_RxCpltCallback(UART_HandleTypeDef *huart)
      |      ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:112:5: warning: 'main' defined but not used [-Wunused-function]
  112 | int main(void)
      |     ^~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

20:40:17 Build Failed. 5 errors, 5 warnings. (took 314ms)

